--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     build:
       context: .
       target: meteor-dev
-    command: bash -c "meteor npm install && reaction"
+    command: bash -c "npm install && reaction"
     depends_on:
       - mongo
     environment:
